# backblaze-frameio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Readme.md  config.py  default.env  default.task.yaml  default.webservice.yaml  main.py  package-lock.json  package.json  pyproject.toml  webservice.yaml
backblaze-frameio-common/: b2.js  customaction.js  frameio.js  package-lock.json  package.json  utils.js
node-docker/: .dockerignore  Dockerfile  README  README.md  b2.js  default.env  exporter.js  formatbytes.js  frameio.js  importer.js  index.js  package-lock.json  package.json  server.js  task.js
node-lambda/: node-lambda.cfn.template
node-lambda/entrypoint/: example-version-stack-children.json  example-version-stack.json  index.js
node-lambda/upload/: index.js
node-risingcloud/: README.md
node-risingcloud/backblaze-frameio-common/: b2.js  formatbytes.js  frameio.js  package-lock.json  package.json  utils.js
node-risingcloud/task/: .npmrc  app.js  package-lock.json  package.json
node-risingcloud/tasks/exporter/: app.js  package-lock.json  package.json
node-risingcloud/web-service/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js  test_client.js
node-risingcloud/webservice/: .gitignore  package-lock.json  package.json  server.js
python-walk/: archival.py  default.env  requirements.txt
src/: b2.js  customaction.js  frameio.js  server.js  task.js  utils.js
test-client/: README.md  package-lock.json  package.json  test_client.js
test_client/: README.md  test_client.js
(+3 files in other folders)
